--- a/src/app/alumno/pages/academico/detalle/detalle.component.html
+++ b/src/app/alumno/pages/academico/detalle/detalle.component.html
@@ -113,7 +113,7 @@
                                         <li class="treeview-list-item">
                                             <div class="treeview-item">
                                                 <a class="flex-1" href="javascript:void(0)" (click)="openModalClass(data.id,recording)">
-                                                    <p class="treeview-text" *ngIf="recording.clase.data_class.url_clase_grabada!=''">
+                                                    <p class="treeview-text" *ngIf="recording.clase.data_class&&recording.clase.data_class.url_clase_grabada!=''">
                                                         <i class="bi bi-play-btn-fill text-danger mx-1"></i>
                                                         {{recording.clase.data_class.name_video_clase}}
                                                     </p>
