--- a/src/app/shared/components/form-pay/form-pay.component.html
+++ b/src/app/shared/components/form-pay/form-pay.component.html
@@ -1,7 +1,7 @@
 <div class="modal-body" *ngIf="generate">
     <div class="row">
         <div class="col-sm-12 col-md-12 mt-2 col-lg-12 text-center">
-            <h3>¡Estás a punto de finalizar tu pago en OEA Educación!</h3>
+            <h3>¡Estás a punto de finalizar tu pago en ALTUX!</h3>
         </div>
         <br>
         <div class="col-md-6 offset-md-3">
@@ -11,8 +11,8 @@
                         <p>Empresa: PagoEfectivo<br> Servicio: PagoEfectivo Soles</p>
                     </div>
                     <div class="col-6 text-center bg-primary" ng-show="displayTooltip">
-                        <p>Código de Pago</p>
-                        <h4>{{generate.payment_code}}</h4>
+                        <p class="text-light">Código de Pago</p>
+                        <h4 class="text-light">{{generate.payment_code}}</h4>
                         <button class="copiar" ng-click="displayTooltip = true" (click)="copyToClipboard()">
                             <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-files" viewBox="0 0 16 16">
                                 <path d="M13 0H6a2 2 0 0 0-2 2 2 2 0 0 0-2 2v10a2 2 0 0 0 2 2h7a2 2 0 0 0 2-2 2 2 0 0 0 2-2V2a2 2 0 0 0-2-2zm0 13V4a2 2 0 0 0-2-2H5a1 1 0 0 1 1-1h7a1 1 0 0 1 1 1v10a1 1 0 0 1-1 1zM3 4a1 1 0 0 1 1-1h7a1 1 0 0 1 1 1v10a1 1 0 0 1-1 1H4a1 1 0 0 1-1-1V4z"/>
