--- a/src/app/ventas/pages/registro/fichas/fichas.component.html
+++ b/src/app/ventas/pages/registro/fichas/fichas.component.html
@@ -26,8 +26,8 @@
                     <td class="text-center"><b>{{valalumnos.created_at | date:'dd/MM/yyyy' }}</b></td>
                     <td class="text-center"><b>{{valalumnos.date_call*1000 | date:'dd/MM/yyyy ⌚HH:mm' }}</b></td>
                     <td class="text-center">
-                        <!-- <a href="javascript:void(0);" data-bs-toggle="tooltip" data-bs-placement="right" title="Eliminar Cliente"
-                                class="" (click)="openDelete(valalumnos.id)">
+                        <a href="javascript:void(0);" data-bs-toggle="tooltip" data-bs-placement="right" title="Eliminar Cliente"
+                                class="" (click)="openModalDel(valalumnos.id)">
                             <svg xmlns="http://www.w3.org/2000/svg" width="25" height="25" fill="currentColor" class="bi bi-trash" viewBox="0 0 16 16">
                                 <path d="M5.5 5.5A.5.5 0 0 1 6 6v6a.5.5 0 0 1-1 0V6a.5.5 0 0 1 .5-.5zm2.5 0a.5.5 0 0 1 .5.5v6a.5.5 0 0 1-1 0V6a.5.5 0 0 1 .5-.5zm3 .5a.5.5 0 0 0-1 0v6a.5.5 0 0 0 1 0V6z"/>
                                 <path fill-rule="evenodd" d="M14.5 3a1 1 0 0 1-1 1H13v9a2 2 0 0 1-2 2H5a2 2 0 0 1-2-2V4h-.5a1 1 0 0 1-1-1V2a1 1 0 0 1 1-1H6a1 1 0 0 1 1-1h2a1 1 0 0 1 1 1h3.5a1 1 0 0 1 1 1v1zM4.118 4 4 4.059V13a1 1 0 0 0 1 1h6a1 1 0 0 0 1-1V4.059L11.882 4H4.118zM2.5 3V2h11v1h-11z"/>
@@ -35,8 +35,7 @@
                         </a>
                         <a href="javascript:void(0);" data-bs-toggle="tooltip" data-bs-placement="right" title="Generar Código de Pago"
                                 class="my-1 mx-3"
-                                (click)="openModalPay(valalumnos.id, valalumnos.names,
-                                valalumnos.courses_name, valalumnos.num_doc, valalumnos.courses_code)">
+                                (click)="openModalPay(valalumnos)">
                             <svg xmlns="http://www.w3.org/2000/svg" width="25" height="25" fill="currentColor" class="bi bi-cash-coin" viewBox="0 0 16 16">
                                 <path fill-rule="evenodd" d="M11 15a4 4 0 1 0 0-8 4 4 0 0 0 0 8zm5-4a5 5 0 1 1-10 0 5 5 0 0 1 10 0z"/>
                                 <path d="M9.438 11.944c.047.596.518 1.06 1.363 1.116v.44h.375v-.443c.875-.061 1.386-.529 1.386-1.207 0-.618-.39-.936-1.09-1.1l-.296-.07v-1.2c.376.043.614.248.671.532h.658c-.047-.575-.54-1.024-1.329-1.073V8.5h-.375v.45c-.747.073-1.255.522-1.255 1.158 0 .562.378.92 1.007 1.066l.248.061v1.272c-.384-.058-.639-.27-.696-.563h-.668zm1.36-1.354c-.369-.085-.569-.26-.569-.522 0-.294.216-.514.572-.578v1.1h-.003zm.432.746c.449.104.655.272.655.569 0 .339-.257.571-.709.614v-1.195l.054.012z"/>
@@ -50,7 +49,7 @@
                                 <path d="M15.502 1.94a.5.5 0 0 1 0 .706L14.459 3.69l-2-2L13.502.646a.5.5 0 0 1 .707 0l1.293 1.293zm-1.75 2.456-2-2L4.939 9.21a.5.5 0 0 0-.121.196l-.805 2.414a.25.25 0 0 0 .316.316l2.414-.805a.5.5 0 0 0 .196-.12l6.813-6.814z"/>
                                 <path fill-rule="evenodd" d="M1 13.5A1.5 1.5 0 0 0 2.5 15h11a1.5 1.5 0 0 0 1.5-1.5v-6a.5.5 0 0 0-1 0v6a.5.5 0 0 1-.5.5h-11a.5.5 0 0 1-.5-.5v-11a.5.5 0 0 1 .5-.5H9a.5.5 0 0 0 0-1H2.5A1.5 1.5 0 0 0 1 2.5v11z"/>
                             </svg>
-                        </a> -->
+                        </a>
                     </td>
                 </tr>
                 </tbody>
@@ -58,6 +57,212 @@
         </div>
     </div>
 </div>
+<!-- Empieza modal editar reserva-->
+<ng-template #editar let-modal>
+    <div class="modal-header d-flex justify-content-center">
+        <div class="alert alert-primary">
+            <b>EDITAR FICHA CLIENTE</b>
+            <button class="btn-close" style="color: black; margin-left: 10px !important;" aria-label="Close"
+                (click)="closeModalEdit()"></button>
+        </div>
+    </div>
+    <div class="modal-body">
+        HOlaaaa
+    </div>
+</ng-template>
+<!-- Empieza modal elimina reserva-->
+<ng-template #delete let-modal>
+    <div class="modal-header">
+        <div class="alert alert-primary">
+            <b>ELIMINACIÓN DE REGISTRO</b>
+            <button class="btn-close" style="color: black; margin-left: 10px !important;" aria-label="Close"
+                (click)="closeModalDel()"></button>
+        </div>
+    </div>
+    <div class="modal-body">
+        <form [formGroup]="formDelete" (submit)="deleteClient()" class="was-validated">
+            <div class="row">
+                <div class="col-md-12 col-sm-12 col-lg-12 mb-2">
+                    <div class="form-group">
+                        <label>Motivo Eliminación</label>
+                        <textarea class="form-control text-secondary" rows="2" formControlName="reason" required>
+                        </textarea>
+                    </div>
+                </div>
+                <div class="col-sm-12 col-lg-12 col-xl-12 text-center ">
+                    <button type="submit" [disabled]="!formDelete.valid" class="btn btn-primary">Eliminar Registro</button>
+                </div>
+            </div>
+        </form>
+    </div>
+</ng-template>
+<!-- Empieza modal reserva-->
+<ng-template #pay let-modal>
+    <div class="modal-header d-flex justify-content-center">
+        <div class="alert alert-primary">
+            <b>GENERAR CÓDIGO DE PAGO</b>
+            <button class="btn-close" style="color: black; margin-left: 10px !important;" aria-label="Close"
+                (click)="closeModalPay()"></button>
+        </div>
+    </div>
+    <div class="modal-body">
+        <form  [formGroup]="formGenerate" (submit)="generateModal()">
+            <div class="col-12">
+                <div class="form-body row">
+                    <div class="col-md-12 col-sm-12 col-lg-12 mb-3">
+                        <div class="form-group">
+                            <label class="form-label">
+                                <span class="text-theme mx-2"><i class="bi bi-book"></i></span>
+                                <b>Diplomado:</b>
+                            </label>
+                            <p class="sub_info">{{detalle.courses_name}}</p>
+                        </div>
+                    </div>
+                    <div class="col-md-12 col-sm-12 col-lg-12 mb-3">
+                        <div class="form-group">
+                            <label class="form-label">
+                                <span class="text-theme mx-2"><i class="bi bi-person"></i></span>
+                                <b>Cliente:</b>
+                            </label>
+                            <p class="sub_info">{{detalle.names}}</p>
+                        </div>
+                    </div>
+                    <div class="col-md-12 col-sm-12 col-lg-12 mb-3">
+                        <div class="form-group mb-2 position-relative">
+                            <div class="input-group input-group-lg">
+                                <span class="input-group-text text-theme bg-white border-end-0"><i class="bi bi-book"></i></span>
+                                <div class="form-floating">
+                                    <select (change)="selectMatricula($event)" class="form-select border-start-0" formControlName="tipo_matricula" required>
+                                        <option value="" disabled selected>Seleccionar Tipo Matricula</option>
+                                        <option *ngFor="let tipoMat of tipo_matricula" value="{{tipoMat.id}}">
+                                            {{tipoMat.name}}
+                                        </option>
+                                    </select>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="col-md-12 col-sm-12 col-lg-12 mb-3" *ngIf="mostrarDate">
+                        <div class="form-group mb-2 position-relative">
+                            <div class="input-group input-group-lg">
+                                <span class="input-group-text text-theme bg-white border-end-0"><i class="bi bi-calendar"></i></span>
+                                <div class="form-floating">
+                                    <input placeholder="" formControlName="fecha" type="datetime-local" class="form-control border-start-0" autocomplete="off" required>
+                                </div>
+                            </div>
+                            <small class="text-muted">Fecha Siguiente Pago</small>
+                            <div *ngIf="formGenerate.controls['fecha'].invalid && (formGenerate.controls['fecha'].dirty || formGenerate.controls['fecha'].touched)" >
+                                <div *ngIf="formGenerate.controls['fecha'].errors.required">
+                                    <small class="text-danger">Por favor ingrese la fecha</small>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="col-md-12 col-sm-12 col-lg-12 mb-3">
+                        <div class="form-group form-check form-switch my-2">
+                            <input class="form-check-input" (change)="optionFacture($event)" type="checkbox" formControlName="is_factura">
+                            <label>
+                                Solicitar Factura
+                            </label>
+                        </div>
+                    </div>
+                    <div class="col-sm-12 col-md-12 col-lg-12 mb-3" *ngIf="mostrarSelect">
+                        <div class="form-group mb-2 position-relative">
+                            <div class="input-group input-group-lg">
+                                <span class="input-group-text text-theme bg-white border-end-0"><i class="bi bi-person-badge"></i></span>
+                                <div class="form-floating">
+                                    <input placeholder="" formControlName="ruc" class="form-control border-start-0" autocomplete="off" maxlength="11"
+                                    onkeyup="if (/\D/g.test(this.value)) this.value = this.value.replace(/\D/g,'')" (keyup)="getInfoByRuc($event)" required>
+                                    <label for="floatingInput">Ingrese Nº RUC</label>
+                                </div>
+                            </div>
+                            <div *ngIf="nameruc" class="text-center text-uppercase" style="border-radius: 5px; background: #2a5390">
+                                <small><b>{{nameruc}}</b></small>
+                            </div>
+                            <div *ngIf="formGenerate.controls['ruc'].invalid && (formGenerate.controls['ruc'].dirty || formGenerate.controls['ruc'].touched)" >
+                                <div *ngIf="formGenerate.controls['ruc'].errors.required">
+                                    <small class="text-danger">Por favor ingrese su número de RUC</small>
+                                </div>
+                                <div *ngIf="formGenerate.controls['ruc'].errors.maxlength">
+                                    <small class="text-danger">Excediste el número máximo de caracteres</small>
+                                </div>
+                                <div *ngIf="formGenerate.controls['ruc'].errors.minlength">
+                                    <small class="text-danger">Debe contener como mínimo 11 caracteres</small>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="col-md-12 col-sm-12 col-lg-12 text-center my-2" *ngIf="discount">
+                        <div class="card">
+                            <div class="card-body">
+                                <div class="alert alert-primary nuevo text-center" role="alert">
+                                    <b>DETALLE PAGO</b>
+                                </div>
+                                <div class="order-table table-responsive">
+                                    <table class="table table-bordered">
+                                        <tbody>
+                                        <tr>
+                                            <td class="text-dark" *ngIf="+discount.first_payment!=0">
+                                                <small>Matrícula:</small>
+                                            </td>
+                                            <td class="text-dark" *ngIf="+discount.first_payment==0">
+                                                <small>{{nombre_descuento}}:</small>
+                                            </td>
+                                            <td *ngIf="+discount.first_payment!=0">
+                                                <small>S/ {{discount.first_payment}}.00</small>
+                                            </td>
+                                            <td *ngIf="+discount.first_payment==0">
+                                                <small>S/ {{discount.price_diplomado}}.00</small>
+                                            </td>
+                                        </tr>
+                                        <tr *ngIf="+discount.first_payment!=0 && !mostrarDiscount">
+                                            <td class="text-dark">
+                                                <small>Primera Cuota:</small>
+                                            </td>
+                                            <td>
+                                                <small>S/ {{discount.second_payment}}.00</small>
+                                            </td>
+                                        </tr>
+                                        <tr>
+                                            <td class="text-dark">
+                                                <small>Descuento:</small>
+                                            </td>
+                                            <td>
+                                                <small>S/ {{discount.price_discount}}.00</small>
+                                            </td>
+                                        </tr>
+                                        <tr>
+                                            <td class="text-dark">
+                                                <small><b>Total a Pagar:</b></small>
+                                            </td>
+                                            <td>
+                                                <b>
+                                                    <small>S/ {{discount.total_payment}}.00</small>
+                                                </b>
+                                            </td>
+                                        </tr>
+                                        </tbody>
+                                    </table>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="col-sm-12 col-lg-12 col-md-12 text-center">
+                        <button type="submit" [disabled]="!formGenerate.valid" class="btn btn-primary">Generar Pago</button>
+                    </div>
+                </div>
+            </div>
+        </form>
+    </div>
+</ng-template>
+<!-- Empieza modal pago-->
+<ng-template #pago let-modal>
+    <div class="modal-header">
+        <img src="https://web-altux-files.s3.amazonaws.com/LOGO_ALTUX_WEB.png" alt="" style="width: 25% !important;">
+        <button type="button" class="btn-close pull-right" style="color: black" aria-label="Close" (click)="closeModalPago()"></button>
+    </div>
+    <app-form-pay [generate]="_generate"></app-form-pay>
+</ng-template>
 <!-- SPINNER -->
 <ngx-spinner bdColor = "rgba(0, 0, 0, 0.8)" size = "medium" color = "#fff" type = "triangle-skew-spin">
     <p style="color: white" > Cargando... </p>
