--- a/src/app/ventas/pages/registro/matriculas/matriculas.component.html
+++ b/src/app/ventas/pages/registro/matriculas/matriculas.component.html
@@ -29,8 +29,8 @@
                     <td class="text-center"><a href="https://wa.me/51{{valalumnos.phone}}" target="_blank">{{valalumnos.phone}}</a></td>
                     <td class="text-center">{{valalumnos.mail}}</td>
                     <td class="text-center">{{valalumnos.courses_name}}</td>
-                    <td class="text-center"><b>{{valalumnos.created_at | date:'d MMMM, y' }}</b></td>
-                    <td class="text-center"><b>{{valalumnos.created_at}}</b></td>
+                    <td class="text-center"><b>{{valalumnos.created_at | date:'dd/MM/yyyy' }}</b></td>
+                    <td class="text-center"><b>{{valalumnos.date_call*1000 | date:'dd/MM/yyyy ⌚HH:mm' }}</b></td>
                     <td class="text-center">
                         <!-- <a href="javascript:void(0);" data-bs-toggle="tooltip" data-bs-placement="right" title="Eliminar Cliente"
                                 class="" (click)="openDelete(valalumnos.id)">
