--- a/src/app/ventas/pages/registro/registro.component.html
+++ b/src/app/ventas/pages/registro/registro.component.html
@@ -37,6 +37,15 @@
                                                 </div>
                                             </ng-template>
                                         </li>
+                                        <li class="me-2 mb-1" [ngbNavItem]="3">
+                                            <a ngbNavLink>Matrículas</a>
+                                            <ng-template ngbNavContent>
+                                                <div class="tab-pane">
+                                                    <br>
+                                                    <app-matriculas></app-matriculas>
+                                                </div>
+                                            </ng-template>
+                                        </li>
                                     </ul>
                                 </div>
                             </div>
@@ -149,7 +158,7 @@
                 </div>
             </div>
         </div>
-        <div class="col-md-6 col-sm-12 col-lg-6 mb-2" *ngIf="isperu">
+        <div class="col-md-6 col-sm-12 col-lg-6 mb-2 text-center" *ngIf="isperu">
             <div class="form-group mb-2 position-relative">
                 <div class="input-group input-group-lg">
                     <span class="input-group-text text-theme bg-white border-end-0"><i class="bi bi-card-heading"></i></span>
@@ -159,9 +168,9 @@
                         <label for="floatingInput">Ingrese DNI</label>
                     </div>
                 </div>
-                <div *ngIf="nameperson" class="text-center text-uppercase" style="border-radius: 5px; background: darkseagreen">
-                    <small><b>{{nameperson}}</b></small>
-                </div>
+                <a href="javascript:void(0);" class="tag mb-2 me-2" *ngIf="nameperson">
+                    <i class="bi bi-person vm ms-2 mx-2"></i> {{nameperson}}
+                </a>
                 <div *ngIf="formRegistro.controls['dni'].invalid && (formRegistro.controls['dni'].dirty || formRegistro.controls['dni'].touched)" >
                     <div *ngIf="formRegistro.controls['dni'].errors.required">
                         <small class="text-danger">Por favor ingrese su número de DNI</small>
@@ -513,7 +522,7 @@
                 </label>
             </div>
         </div>
-        <div class="col-sm-12 col-lg-12 col-xl-12 text-center mb-2" *ngIf="mostrarSelect && !ficha">
+        <div class="col-sm-12 col-lg-12 col-md-12 text-center mb-2" *ngIf="is_facture && !ficha">
             <div class="form-group mb-2 position-relative">
                 <div class="input-group input-group-lg">
                     <span class="input-group-text text-theme bg-white border-end-0"><i class="bi bi-person-badge"></i></span>
@@ -523,9 +532,9 @@
                         <label for="floatingInput">Ingrese Nº RUC</label>
                     </div>
                 </div>
-                <div *ngIf="nameruc" class="text-center text-uppercase" style="border-radius: 5px; background: #2a5390">
-                    <small><b>{{nameruc}}</b></small>
-                </div>
+                <a href="javascript:void(0);" class="tag mb-2 me-2" *ngIf="nameruc">
+                    <i class="bi bi-person vm ms-2 mx-2"></i> {{nameruc}}
+                </a>
                 <div *ngIf="formRegistro.controls['ruc'].invalid && (formRegistro.controls['ruc'].dirty || formRegistro.controls['ruc'].touched)" >
                     <div *ngIf="formRegistro.controls['ruc'].errors.required">
                         <small class="text-danger">Por favor ingrese su número de RUC</small>
@@ -548,9 +557,9 @@
 </ng-template>
 <!-- Modal Pago-->
 <ng-template #modal_pago let-modal>
-    <div class="modal-header" style="display: flow-root">
-        <img src="https://web-altux-files.s3.amazonaws.com/LOGO_ALTUX_WEB.png" alt="">
-        <button type="button" class="btn-close pull-right" aria-label="Close" (click)="closeModalInfo()"></button>
+    <div class="modal-header">
+        <img src="https://web-altux-files.s3.amazonaws.com/LOGO_ALTUX_WEB.png" alt="" style="width: 25% !important;">
+        <button type="button" class="btn-close pull-right" style="color: black" aria-label="Close" (click)="closeModalInfo()"></button>
     </div>
     <app-form-pay [generate]="_generate"></app-form-pay>
 </ng-template>
